# wordle

./: Cargo.toml  LICENSE  README.md  freqs.csv  freqs.py  test.py
benches/: bench.rs
src/: lib.rs  main.rs
